ymls/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: go-web-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
